--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   },
   "repository": "christroutner/retry-queue",
   "dependencies": {
-    "p-queue": "7.3.0"
+    "p-queue": "7.3.0",
+    "p-retry": "5.1.1"
   },
   "devDependencies": {
     "apidoc": "0.53.0",
